<resources>
    <string name="app_name">UAgenda</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="name_of_task">Name of task</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="course">Course:</string>
    <string name="select_date">Select Date</string>
    <string name="type">Type:</string>
</resources>
